--- a/src/app/people/inspect/inspect.component.html
+++ b/src/app/people/inspect/inspect.component.html
@@ -1,14 +1,10 @@
 <section class="mat-typography container p-2">
   <div class="row justify-content-between title-back">
-    <h4  class="mat-display-2 title" mat-dialog-title>
+    <h4 class="mat-display-2 title" mat-dialog-title>
       Person Details
     </h4>
 
-    <button
-      mat-icon-button
-      mat-dialog-close
-      aria-label="Example icon-button with a heart icon"
-    >
+    <button mat-icon-button mat-dialog-close aria-label="Example icon-button with a heart icon">
       <mat-icon>x</mat-icon>
     </button>
   </div>
@@ -16,61 +12,48 @@
   <main>
     <mat-dialog-content class="">
       <p>
-        <label class="attributes">Nombre: </label
-        ><label for="name">{{ data.name }}</label>
+        <label class="attributes">Nombre: </label><label for="name">{{ data.person.name }}</label>
       </p>
       <p>
-        <label class="attributes">Last Name: </label
-        ><label for="name">{{ data.lastName }}</label>
+        <label class="attributes">Last Name: </label><label for="name">{{ data.person.lastName }}</label>
       </p>
       <p>
-        <label class="attributes">Date of birth: </label
-        ><label for="birth">{{ data.birthdate }}</label>
+        <label class="attributes">Date of birth: </label><label for="birth">{{ data.person.birthdate }}</label>
       </p>
       <p class="justify-content-between">
         <span>
-          <label class="attributes">Document ID: </label
-          ><label for="id">{{ data.document }}</label>
+          <label class="attributes">Document ID: </label><label for="id">{{ data.person.document }}</label>
         </span>
         <span class="elem2">
-          <label class="attributes">Type: </label
-          ><label for="type">{{ data.documentType }}</label>
+          <label class="attributes">Type: </label><label for="type">{{ data.person.documentType }}</label>
         </span>
       </p>
       <p>
-        <label class="attributes">Gender: </label
-        ><label for="gender">{{ data.gender }}</label>
+        <label class="attributes">Gender: </label><label for="gender">{{ data.person.gender }}</label>
       </p>
       <p>
-        <label class="attributes">Country: </label
-        ><label for="country">{{ data.country }}</label>
+        <label class="attributes">Country: </label><label for="country">{{ data.person.country }}</label>
       </p>
       <p>
         <label class="attributes">Contact</label>
       </p>
 
       <p>
-        <label class="space attributes2">{{ data.contactType1 }}:</label>
-        <label class="space">{{ data.contact1 }}</label>
+        <label class="space attributes2">{{ data.person.contactType1 }}:</label>
+        <label class="space">{{ data.person.contact1 }}</label>
       </p>
       <p>
-          <label class="space attributes2">{{ data.contactType2 }}:</label>
-          <label class="space">{{ data.contact2 }}</label>
-        </p>
+        <label class="space attributes2">{{ data.person.contactType2 }}:</label>
+        <label class="space">{{ data.person.contact2 }}</label>
+      </p>
     </mat-dialog-content>
   </main>
   <footer>
     <mat-dialog-actions class="cont1">
-      <button mat-raised-button [color]="'list-it'" class="but1">
+      <button mat-raised-button mat-dialog-close (click)="openKinship(data)" [color]="'list-it'">
         List Kinships
       </button>
-      <button
-        mat-raised-button
-        mat-dialog-close
-        (click)="openEdit(data)"
-        [color]="'edit-it'"
-        class="but2"
-      >
+      <button mat-raised-button mat-dialog-close (click)="openEdit(data)" [color]="'edit-it'">
         Edit
       </button>
       <button mat-raised-button mat-dialog-close color="warn" (click)="delete(data)" class="but3">
