--- a/src/app/kinships/list/listkinship.component.html
+++ b/src/app/kinships/list/listkinship.component.html
@@ -17,23 +17,23 @@
   <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
 
   <mat-table [dataSource]="tableData" matSort matSortDisableClear class="mat-elevation-z8">
-    <ng-container matColumnDef="1">
-      <mat-header-cell id="person" *matHeaderCellDef (click)="orderTable()" mat-sort-header>Person</mat-header-cell>
+    <ng-container matColumnDef="personName">
+      <mat-header-cell id="person" *matHeaderCellDef mat-sort-header>Person</mat-header-cell>
       <mat-cell *matCellDef="let element">
         {{ element.personName }} {{ element.personLastName }}
       </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="2">
-      <mat-header-cell *matHeaderCellDef mat-sort-header (click)="orderTable()" disableClear>
+    <ng-container matColumnDef="kinshipType">
+      <mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
         Kinship Type
       </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.kinshipType }}
       </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="3">
-      <mat-header-cell *matHeaderCellDef (click)="orderTable()" mat-sort-header>
+    <ng-container matColumnDef="relativeName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
         Relative
       </mat-header-cell>
       <mat-cell *matCellDef="let element">
@@ -45,7 +45,7 @@
       <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
       <mat-cell *matCellDef="let element">
         <mat-icon matTooltip="Edit Kinship" class="icon" (click)="openEdit(element)">edit</mat-icon>
-        <mat-icon matTooltip="Delete Kinship" class="icon delete" (click)="delete(element)">delete_forever</mat-icon>
+        <mat-icon matTooltip="Delete Kinship" class="icon delete" (click)="delete(element.personId, element.relativeId)">delete_forever</mat-icon>
       </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
