--- a/src/app/kinships/edit/edit.component.html
+++ b/src/app/kinships/edit/edit.component.html
@@ -21,7 +21,7 @@
         <mat-form-field>
           <mat-label>Kinship</mat-label>
           <mat-select placeholder="Kinship" [(value)]="relationSelected">
-            <mat-option *ngFor="let relation of relations" [value]="relation.value">{{ relation.type }}</mat-option>
+            <mat-option *ngFor="let relation of relations" [value]="relation.id">{{ relation.name }}</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
