--- a/src/app/people/list/list.component.html
+++ b/src/app/people/list/list.component.html
@@ -1,44 +1,63 @@
-<section id="post" class="container p-4">
-<mat-form-field>
-    <input class="search" matInput (keyup)="onChange($event.target.value)" placeholder="Search">
-  </mat-form-field>
-  <div class="options">
-  <button class="buttons" style="align-content: flex-end" (click)="openCreate()">Create <span>New</span></button>
-</div>
-
-  <mat-paginator [pageSizeOptions]="[10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
-
-  <mat-table  [dataSource]="tableData" matSort  matSortDisableClear class="mat-elevation-z8">
-
-    <ng-container matColumnDef="1">
-      <mat-header-cell id="titular" *matHeaderCellDef (click)="orderTable()" mat-sort-header>Name</mat-header-cell>
-      <mat-cell class="colum-name" *matCellDef="let element"> {{element.name}} {{element.lastName}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="2">
-      <mat-header-cell *matHeaderCellDef mat-sort-header (click)="orderTable()" disableClear> Document </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.document}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="3" class="colum-doctype">
-      <mat-header-cell class="colum-doctype" *matHeaderCellDef (click)="orderTable()" mat-sort-header> Document Type </mat-header-cell>
-      <mat-cell class="colum-doctype" *matCellDef="let element"> {{element.documentType}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="4" class="colum-country">
-      <mat-header-cell class="colum-country" *matHeaderCellDef (click)="orderTable()" mat-sort-header> Country </mat-header-cell>
-      <mat-cell class="colum-country" *matCellDef="let element"> {{element.country}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="buttons">
-        <mat-header-cell *matHeaderCellDef > Action </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-         <mat-icon  matTooltip="Info about the Person" class="icon" (click)="openInfo(element)">info</mat-icon>
-          <mat-icon matTooltip="Edit Person" class="icon" (click)="openEdit(element)">edit</mat-icon>
-          <mat-icon matTooltip="Delete Person" class="icon delete" (click)="delete(element)">delete_forever</mat-icon>
-        </mat-cell>
-     </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
+<section class="container">
+  <!-- Loading -->
+  <div class="row" *ngIf="isLoading">
+    <div class="col">
+      <div class="d-flex justify-content-center pb-3 pt-3">
+        <mat-spinner></mat-spinner>
+      </div>
+    </div>
+  </div>
+  <!-- Options -->
+  <div class="row align-items-center justify-content-center" *ngIf="!isLoading">
+    <!-- Search input -->
+    <div class="col-sm col-12">
+      <mat-form-field style="width: 100%;">
+        <input matInput (keyup)="filterTableData($event.target.value)" placeholder="Search" />
+      </mat-form-field>
+    </div>
+    <!-- Create button -->
+    <div class="col-auto pb-sm-0 pb-3">
+      <button mat-raised-button color="primary" (click)="openCreateDialog()">Create person</button>
+    </div>
+  </div>
+  <!-- People table -->
+  <div class="row" [hidden]="isLoading">
+    <div class="col">
+      <div style="overflow-x: auto;">
+        <mat-table [dataSource]="peopleDataSource" matSort matSortDisableClear style="min-width: 750px;">
+          <!-- Name column -->
+          <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+            <mat-cell *matCellDef="let person">{{person.name}} {{person.lastName}}</mat-cell>
+          </ng-container>
+          <!-- Document column -->
+          <ng-container matColumnDef="document">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Document</mat-header-cell>
+            <mat-cell *matCellDef="let person">{{person.document}}</mat-cell>
+          </ng-container>
+          <!-- Document type column -->
+          <ng-container matColumnDef="documentType">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Document Type</mat-header-cell>
+            <mat-cell *matCellDef="let person">{{person.documentType}}</mat-cell>
+          </ng-container>
+          <!-- Country column -->
+          <ng-container matColumnDef="country">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Country</mat-header-cell>
+            <mat-cell *matCellDef="let person">{{person.country}}</mat-cell>
+          </ng-container>
+          <!-- Actions column -->
+          <ng-container matColumnDef="actions">
+            <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+            <mat-cell *matCellDef="let person">
+              <mat-icon matTooltip="Show info" class="action-icon" (click)="openInspectDialog(person.id)">info</mat-icon>
+              <mat-icon matTooltip="Edit" class="action-icon" (click)="openEditDialog(person.id)">edit</mat-icon>
+              <mat-icon matTooltip="Delete" class="action-icon action-delete" (click)="promptDeletePerson(person.id, person.name, person.lastName)">delete</mat-icon>
+            </mat-cell>
+          </ng-container>
+          <mat-header-row *matHeaderRowDef="columnsToDisplay"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: columnsToDisplay;"></mat-row>
+        </mat-table>
+      </div>
+    </div>
+  </div>
 </section>
