--- a/src/app/people/list/list.component.scss
+++ b/src/app/people/list/list.component.scss
@@ -1,80 +1,10 @@
-table {
-  width: 100%;
-}
-
-.colum-name {
-  text-align: left;
-}
-
-.header {
-  padding: 5px;
-}
-
-.filter {
-  display: block;
-}
-
-.icon {
+.action-icon {
   background: #8ad1f3;
   color: white;
   margin: 2px;
   border-radius: 5px;
-}
 
-.delete {
-  background: #fb7a7a;
-}
-
-mat-form-field {
-  width: 70%;
-  left: 0px;
-}
-
-mat-header-cell,
-mat-cell {
-  justify-content: left;
-}
-
-.options {
-  width: 25%;
-  display: inline-flex;
-  margin-left: 5%;
-}
-
-.buttons {
-  margin-left: 6%;
-  text-align: right;
-  display: inline-block;
-}
-
-@media screen and (min-width: 400px) and (max-width: 767px) {
-  .colum-doctype {
-    display: none;
+  &.action-delete {
+    background: #fb7a7a;
   }
-}
-
-@media screen and (min-width: 400px) and (max-width: 500px) {
-  .colum-doctype {
-    display: none;
-  }
-
-  span {
-    display: none;
-  }
-}
-
-
-@media screen and (min-width: 359px) and (max-width: 400px) {
-  .colum-doctype {
-    display: none;
-  }
-
-  .colum-country {
-    display: none;
-  }
-
-  span {
-    display: none;
-  }
-
 }
